@@ -472,11 +472,11 @@ public class ImportLog extends AbstractModel<Long> implements PersistenceCapable
     }
     
     public void pcCopyKeyFieldsFromObjectId(final FieldConsumer fieldConsumer, final Object o) {
-        fieldConsumer.storeObjectField(7 + ImportLog.pcInheritedFieldCount, (Object)new Long(((LongId)o).getId()));
+        fieldConsumer.storeObjectField(7 + ImportLog.pcInheritedFieldCount, (Object)Long.valueOf(((LongId)o).getId()));
     }
     
     public void pcCopyKeyFieldsFromObjectId(final Object o) {
-        this.id = new Long(((LongId)o).getId());
+        this.id = Long.valueOf(((LongId)o).getId());
     }
     
     public Object pcNewObjectIdInstance(final Object o) {
